<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:gravity="center"
              tools:context=".fragments.RegisterFragment">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_marginStart="20dp"
                      android:layout_marginEnd="20dp">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:inputType="text"
                        android:id="@+id/registerUsername"
                        android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:inputType="textPassword"
                        android:id="@+id/registerPassword"
                        android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:inputType="text"
                        android:id="@+id/registerFirstName"
                        android:hint="@string/first_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:inputType="text"
                        android:id="@+id/registerLastName"
                        android:hint="@string/last_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:inputType="text"
                        android:id="@+id/registerEmail"
                        android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/gender"/>
                <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/registerGenderGroup"
                            android:checkedButton="@+id/registerMale">
                    <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:id="@+id/registerMale"
                                 android:text="@string/male"/>
                    <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:id="@+id/registerFemale"
                                 android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                    android:text="@string/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/triggerRegister"
                    android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>