<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.LoginFragment">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="text"
                    android:id="@+id/loginUsername"
                    android:hint="@string/username"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="textPassword"
                    android:id="@+id/loginPassword"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/triggerLogin"
                android:layout_marginTop="20dp"/>
    </LinearLayout>

</FrameLayout>